# ProjetML

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: GautierModifSurIlona.ipynb  imports.py  main.py  notebook_fourni.ipynb  section1.py  section2.py  section2_4_FineTuning.py  section2_4_FineTuningVGG16.py  section2_4_PCA_SVM.py  section2_4_ResNet50.py  section2_4_train_finetuning.py  section2_4_tune_C_SVM.py  train_finetuning.py
